# TrainingProj

./: .env.example  README.md  pyproject.toml
module1/: doubly_linked_list.py  local_area.py  minesweeper.py
module2/: database.py
module2/books/models/: book.py  client.py  order.py
module2/parses/: main.py  model.py  saver.py  utils.py
module4/: database.py
module4/async_parses/: main.py  model.py  saver.py  utils.py
